@@ -77,3 +77,4 @@
 2020-08-30 catering.py views bug repaired by viewing tableviews with no records in database
 2020-08-30 databases full_catering.backup catering.backup and empty-catering.backup changed for above problems
 2020-08-30 catering.py bug repaired by purchase menu catching submenu-lines
+2020-08-30 catering.py modest calculator error handling improved
